Changelog
=========

1.9.6 (unreleased)
------------------

- Nothing changed yet.


1.9.5 (2017-11-03)
------------------

- Make snippet text upgrade from 1.9.4 more robust. [jone]

1.9.4 (2017-11-03)
------------------

- Fix escaping issue when highlighting plaintext. [jone]

- Always quote values of a list containing an operator.
  [mathias.leimgruber]

- Use searchform action as endpoint in search.js.
  [mathias.leimgruber]


1.9.3 (2017-08-28)
------------------

- Fix position of facet closing icon.
  [mbaechtold]


1.9.2 (2017-08-08)
------------------

- Also prevent a invalid urls generated by the livesearch.py
  [mathias.leimgruber]


1.9.1 (2017-08-08)
------------------

- Prevent invalid url if the object has a get parameter in his path.
  [lknoepfel]

- Remove search viewlet submit from tabindex.
  [lknoepfel]


1.9.0 (2017-06-28)
------------------

- Implement first suggestion on livesearch view, if suggestions are enabled.
  [mathias.leimgruber]


1.8.6 (2017-06-06)
------------------

- Hide and order the viewlets for all skins and not only for the "Sunburst Theme"-skin
  [elioschmutz]

- Prevent invalid url if the object has a get parameter in his path.
  [lknoepfel]


1.8.5 (2017-04-19)
------------------

- Lower searchwords in ISearchwords indexer, since the value is always lowered in ftw.solr.
  This applies only for DX content.
  [mathias.leimgruber]

- Fix font for livesearch results.
  [Kevin Bieri]


1.8.4 (2016-12-16)
------------------

- Make getting the facets more robust which caused projects having customizations
  of selected facets to crash when displaying the search results.
  [mbaechtold]


1.8.3 (2016-12-15)
------------------

- Remove hidden input from tabindex.
  [mathias.leimgruber]

- Only append "Search in current folder" option to livesearch if not on plone root.
  [mathias.leimgruber]


1.8.2 (2016-11-24)
------------------

- Scan for external links after every search page refresh.
  [mathias.leimgruber]
